Add scale setting and modify Module constructor
Refactor Module class to include scale setting and improve constructor.